Upgrade Java from 17 to 21